feat: Refactor TODO API to support async operations and enhance configuration options

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ DATABASE_USER=todo_user
 DATABASE_PASSWORD=todo_pass
 DATABASE_NAME=todo_db
 DATABASE_ECHO=false
+# Optional DSN overrides (uncomment to override assembled URLs)
+# DATABASE_URL=postgresql+psycopg2://todo_user:todo_pass@localhost:5432/todo_db
+# ASYNC_DATABASE_URL=postgresql+asyncpg://todo_user:todo_pass@localhost:5432/todo_db
 LOG_LEVEL=DEBUG
