Fix AAD authentication for asyncpg and add aiohttp dependency

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,33 @@
+# Application Configuration
 APP_NAME=todo-api
 APP_ENV=development
 APP_DEBUG=true
 API_PREFIX=/api/v1
+LOG_LEVEL=INFO
+
+# Database Authentication Mode
+# - password: For local development (default)
+# - aad: For Azure with Managed Identity
+DB_AUTH_MODE=password
+
+# Database Connection (Password Mode - Local Development)
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=todo_user
 DATABASE_PASSWORD=todo_pass
 DATABASE_NAME=todo_db
 DATABASE_ECHO=false
-# Optional DSN overrides (uncomment to override assembled URLs)
-# DATABASE_URL=postgresql+psycopg2://todo_user:todo_pass@localhost:5432/todo_db
-# ASYNC_DATABASE_URL=postgresql+asyncpg://todo_user:todo_pass@localhost:5432/todo_db
-LOG_LEVEL=DEBUG
+
+# Database URL Overrides (optional)
+# Use these to override the auto-constructed URLs
+# DATABASE_URL=postgresql+psycopg2://user:pass@host:5432/dbname
+# ASYNC_DATABASE_URL=postgresql+asyncpg://user:pass@host:5432/dbname
+
+# Azure Managed Identity (AAD Mode - Azure Deployment)
+# These are automatically set by Azure Container Apps when deployed
+# AZURE_CLIENT_ID=<managed-identity-client-id>
+
+# Application Insights (optional)
+# Set this to enable OpenTelemetry telemetry export
+# Automatically set by Azure Container Apps when deployed
+# APPLICATIONINSIGHTS_CONNECTION_STRING=InstrumentationKey=...;IngestionEndpoint=...
