--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  workflow_dispatch:
 
 jobs:
   quality:
@@ -32,28 +29,74 @@ jobs:
       - name: Run tests
         run: pytest
 
-  docker:
+  migrations:
     needs: quality
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push image
-        uses: docker/build-push-action@v5
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Azure Login
+        uses: azure/login@v2
         with:
-          context: .
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Install azd
+        uses: Azure/setup-azd@v1.0.0
+      - name: Load azd environment values
+        env:
+          AZURE_ENV_NAME: ${{ secrets.AZURE_ENV_NAME }}
+        run: |
+          azd env refresh -e "$AZURE_ENV_NAME"
+          azd env select "$AZURE_ENV_NAME"
+          POSTGRES_FQDN=$(azd env get-value POSTGRES_FQDN)
+          MANAGED_IDENTITY_CLIENT_ID=$(azd env get-value MANAGED_IDENTITY_CLIENT_ID)
+          echo "POSTGRES_FQDN=$POSTGRES_FQDN" >> "$GITHUB_ENV"
+          echo "MANAGED_IDENTITY_CLIENT_ID=$MANAGED_IDENTITY_CLIENT_ID" >> "$GITHUB_ENV"
+      - name: Run database migrations
+        env:
+          POSTGRES_FQDN: ${{ env.POSTGRES_FQDN }}
+          MANAGED_IDENTITY_CLIENT_ID: ${{ env.MANAGED_IDENTITY_CLIENT_ID }}
+        run: |
+          TOKEN=$(az account get-access-token --resource https://ossrdbms-aad.database.windows.net --query accessToken -o tsv)
+          export PGPASSWORD="$TOKEN"
+          export DATABASE_URL="postgresql+psycopg2://${MANAGED_IDENTITY_CLIENT_ID}@${POSTGRES_FQDN}:5432/postgres?sslmode=require"
+          alembic upgrade head
+      - name: Seed database
+        env:
+          POSTGRES_FQDN: ${{ env.POSTGRES_FQDN }}
+          MANAGED_IDENTITY_CLIENT_ID: ${{ env.MANAGED_IDENTITY_CLIENT_ID }}
+          DB_AUTH_MODE: aad
+          DATABASE_HOST: ${{ env.POSTGRES_FQDN }}
+          DATABASE_PORT: "5432"
+          DATABASE_NAME: postgres
+          DATABASE_USER: ${{ env.MANAGED_IDENTITY_CLIENT_ID }}
+          AZURE_CLIENT_ID: ${{ env.MANAGED_IDENTITY_CLIENT_ID }}
+        run: python scripts/seed_data.py
+
+  deploy:
+    needs: migrations
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Install azd
+        uses: Azure/setup-azd@v1.0.0
+      - name: Load azd environment
+        env:
+          AZURE_ENV_NAME: ${{ secrets.AZURE_ENV_NAME }}
+        run: |
+          azd env refresh -e "$AZURE_ENV_NAME"
+          azd env select "$AZURE_ENV_NAME"
+      - name: Deploy to Azure Container Apps
+        run: azd deploy --no-prompt
