Add migration service principal for AAD-authenticated database migrations
- Create postprovision hook to automatically set up migration SP during azd provision
- Enhance run_migrations.sh to support SP authentication with AAD tokens
- Add POSTGRES_DB output to Bicep for easier configuration
- Update azure.yaml to include postprovision hook
- Document migration architecture and setup in docs/migrations-setup.md
- Remove GitHub Actions CI workflow (migrations run via azd instead)

The migration SP solves the AAD token type issue where service principals
cannot generate APP_USER tokens needed for managed identity impersonation.
Now migrations can be run from anywhere (local, azd, CI/CD) using the
dedicated migration service principal with its own AAD admin access.

--- a/azure.yaml
+++ b/azure.yaml
@@ -9,6 +9,10 @@ hooks:
     shell: sh
     run: ./infra/hooks/preprovision.sh
     continueOnError: false
+  postprovision:
+    shell: sh
+    run: ./infra/hooks/postprovision.sh
+    continueOnError: false
 
 services:
   api:
