Refactor Azure deployment scripts and documentation for improved managed identity handling and migration service principal setup

--- a/azure.yaml
+++ b/azure.yaml
@@ -13,7 +13,7 @@ hooks:
     shell: sh
     run: ./infra/hooks/postprovision.sh
     continueOnError: false
-  predeploy:
+  postdeploy:
     shell: sh
     run: ./infra/scripts/run_migrations.sh
     continueOnError: false
