Azure deployment with password-based authentication for PostgreSQL, configure dedicated app database user, and streamline migration scripts

--- a/azure.yaml
+++ b/azure.yaml
@@ -5,6 +5,10 @@ metadata:
   template: fastapi-reference-arch@0.0.1-beta
 
 hooks:
+  postpackage:
+    shell: sh
+    run: ./infra/hooks/postpackage.sh
+    continueOnError: false
   preprovision:
     shell: sh
     run: ./infra/hooks/preprovision.sh
