--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,2 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.1
-sqlalchemy==2.0.24
-alembic==1.13.1
-psycopg2-binary==2.9.9
-asyncpg==0.29.0
-aiosqlite==0.20.0
-pydantic-settings==2.3.4
-python-dotenv==1.0.1
-
-# Azure dependencies
-azure-identity==1.19.0
-aiohttp==3.10.11  # Required by azure-identity for async operations
-azure-monitor-opentelemetry==1.6.4
-# Align with azure-monitor-opentelemetry dependency (requires ~0.49)
-opentelemetry-instrumentation-fastapi==0.49b0
-opentelemetry-instrumentation-sqlalchemy==0.49b0
-opentelemetry-instrumentation-logging==0.49b0
-
-# Testing
-pytest==7.4.4
-pytest-asyncio==0.23.6
-httpx==0.27.0
-
-# Code quality
-black==24.4.2
-isort==5.13.2
-ruff==0.5.4
-pre-commit==3.8.0
+# Single source of truth is pyproject.toml. Install with dev extras for tooling/tests.
+.[dev]
